# pytorch_templates

./: .gitignore  pyproject.toml  train_model.py
models/: checkpoint.pth  cnn_model.pth  torch_onnx.onnx
pytorch_models_templates/: bert.ipynb  gpt.ipynb  ner_model.ipynb  rnn_model.pt  transformer.ipynb
pytorch_templates/: 1.datasets_dataloader.ipynb  10.transfer_learning.ipynb  3.training_loop.ipynb  5.save_load_model.ipynb  6.pytorch_onnx.ipynb  7.torch_tensorrt.ipynb  8.pytorch_profiler.ipynb  classes_for_nn.ipynb  datasets_dataloader.ipynb  earlystopping.ipynb  lr_scheduler.ipynb  lr_scheduler_early_stopping.ipynb  model_deployment.ipynb  pytorch_onnx.ipynb  quantize_torch_model.ipynb  save_load_model.ipynb  torch_tensorrt.ipynb  train_helpers.py  training_loop.ipynb  transforms.ipynb  utils.py
